<package>
  <version>1.0.1</version>
  <name>waypoint_generator</name>
  <description>
     waypoint_generator
  </description>
  <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/waypoint_generator</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
